@@ -217,6 +217,9 @@ turns on (- off) XON/XOFF support.
 turns on (- off) hardware flow control.
 .I [-]LOCAL
 ignores (- checks) the modem control lines (DCD, DTR, etc.)
+.I [-]HANGUP_WHEN_DONE
+lowers (- does not lower) the modem control lines (DCD, DTR, etc.) when
+the connection closes.
 .I remctl
 allows remote control of the serial port parameters via RFC 2217.  See
 the README for more info.
