@@ -33,8 +33,10 @@
 #            of  stop bits.  7DATABITS, 8DATABITS set the number
 #            of data bits.  [-]XONXOFF turns on (- off) XON/XOFF
 #            support.  [-]RTSCTS  turns on (- off) hardware flow
-#            control and [-]LOCAL turns off (- on) monitoring of
-#            the modem lines.  The "remctl" option allow remote
+#            control, [-]LOCAL turns off (- on) monitoring of
+#            the modem lines, and [-]HANGUP_WHEN_DONE turns on
+#            (- off) lowering the modem control lines when the
+#            connextion is done.  The "remctl" option allow remote
 #	     control (ala RFC 2217) of serial-port configuration.
 #            A banner name may also be specified, that banner will
 #            be printed for the line.  If no banner is given, then
