@@ -1,3 +1,6 @@
+2004-11-29  Corey Minyard <minyard@acm.org>
+
+	* dataxfer: Remove UUCP lock if the setup of the device fails.
 
 2004-05-08  Marc Haber
 
